tests/endtoend/failure/expected/error_redeclare.compile.out
error_redeclare.silly:2:1: error: Variable x already declared
    2 | FLOAT64 x;
      | ^
